--- a/exercice2.html
+++ b/exercice2.html
@@ -7,7 +7,7 @@
     <title>Exercice 2</title>
 </head>
 <body>
-    <h1 style="color: white; text-align: center;font-size: 54px;">Principales depenses par trimestre d'une famille canadienne</h1>
+    <h1 style="color: white; text-align: center;font-size: 54px; font-style: italic;">Principales depenses par trimestre d'une famille canadienne</h1>
     <table>
         <tr>
             <th>Trimestre depenses</th>
@@ -77,11 +77,18 @@
 
         </tr>
         <tr>
-            <th>Grand Total</th>
+            <th colspan="4" style="text-align: left;">Grand Total</th>
+            <td style="color: red;">38850</td>
         
         </tr>
 
 
     </table>
+
+
+    <a href="index.html" target="_self" style="color: white; font-size: 25px;"> Pour retenir</a>
+
 </body>
 </html>
+
+<!-- https://pngtree.com/freebackground/digitally-textured-abstract-background-with-colorful-triangles_2682662.html      --> 
