--- a/exercice1.html
+++ b/exercice1.html
@@ -22,7 +22,7 @@
         </tr>
     </table>
     
-    <a href="index.html" target="_blank">Pour revenir</a>
+    <a href="index.html" target="_self">Pour revenir</a>
 
 </body>
 </html>
