--- a/exercice2.html
+++ b/exercice2.html
@@ -86,7 +86,7 @@
     </table>
 
 
-    <a href="index.html" target="_self" style="color: white; font-size: 25px;"> Pour retenir</a>
+    <a href="index.html" target="_self" style="color: white; font-size: 25px;"> Pour revenir</a>
 
 </body>
 </html>
